--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/finnp/flat-stream",
   "dependencies": {
     "flat": "^1.3.0",
+    "minimist": "^1.1.0",
     "ndjson": "^1.2.3",
     "through2": "^0.6.3"
   }
